bynkc/tests/fixtures/positive/171_integration_two_context_service/src/checkout.bynk
---
Integration test: the ordersŌåÆpayment flow across the Worker boundary.
Both contexts run as real (in-process) Workers; the cross-context call
travels the real serialise/deserialise wire.
---
suite integration "checkout" {
  wires shop.orders, shop.payment

  case "small order authorises across the wire" {
    let r <- shop.orders.place(100)
    expect r is Ok(_)
  }

  case "large order is rejected end to end" {
    let r <- shop.orders.place(50000)
    expect r is Err(_)
  }
}
