bynkc/tests/fixtures/negative/135_integration_unwired_dependency/src/it.bynk
suite integration "x" {
  wires app.cons, app.bystander
  case "t" { let r <- app.cons.run() expect r is Ok(_) }
}
